# ask_ai

./: .gitignore  Cargo.toml  README.md  legatio.md
.github/workflows/: ci.yml
src/: ask_ai.rs  config.rs  error.rs  lib.rs  model.rs
tests/: test_ask_ai.rs
