[package]
name = "ask_ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "ask_ai"
path = "src/lib.rs"

[dependencies]

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"

openai-api-rs = "5.2.4"
anthropic-rs = "0.1.7"
ollama-rs = "0.2.0"
