[package]
name = "ask_ai"
version = "0.1.4"
edition = "2021"
description = "A library for interacting with various AI frameworks"
license = "MIT"
authors = ["Eduardo Neville <eduardoneville82@gmail.com>"]
readme="README.md"
repository = "https://github.com/EduardoNeville/ask_ai"
documentation = "https://docs.rs/ask_ai"

[lib]
name = "ask_ai"
path = "src/lib.rs"

[dependencies]

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.19", features = ["json", "blocking", "rustls-tls"] }
anyhow = "1.0"
ollama-rs = "0.2.0"

[dev-dependencies]
httpmock = "0.7.0"
serial_test = "2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
